fix: scrollbar removed when Radix Dialog is open

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,10 +39,14 @@
   *[data-highlighted]:not(:hover) {
     @apply !outline-none focus:outline-2 focus:outline-white focus:ring-2 focus:ring-blue-500 focus:ring-offset-2;
   }
-  /* ? hack to stop the scrollbar being hidden when a modal is open, causes shift from the padding that Radix adds when scroll is hidden */
-  /* body[data-scroll-locked][data-scroll-locked] {
-    overflow-y: scroll !important;
-  } */
+  /* ? hack to stop the scrollbar being hidden (but hide the thumb) when a Radix Dialog is open */
+  html body[data-scroll-locked] {
+    overflow: visible !important;
+    margin-right: 0 !important;
+    & ::-webkit-scrollbar-thumb {
+      display: none;
+    }
+  }
 }
 
 /* autofill style hack: https://github.com/tailwindlabs/tailwindcss/discussions/8679 */
